RESOLVED FIXED277028
[Site Isolation] Fix `WKAccessibilityRootObject`
https://bugs.webkit.org/show_bug.cgi?id=277028
Summary [Site Isolation] Fix `WKAccessibilityRootObject`
Charlie Wolfe
Reported 2024-07-24 13:08:22 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-24 13:08:38 PDT
Charlie Wolfe
Comment 2 2024-07-24 13:15:34 PDT
EWS
Comment 3 2024-07-24 22:11:49 PDT
Committed 281333@main (833adfcdc125): <https://commits.webkit.org/281333@main> Reviewed commits have been landed. Closing PR #31182 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.