Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundleFramePrivate.h
@@ -57,6 +57,8 @@ WK_EXPORT void WKBundleFrameFocus(WKBundleFrameRef frame);
 
 WK_EXPORT void _WKBundleFrameGenerateTestReport(WKBundleFrameRef, WKStringRef message, WKStringRef group);
 
+WK_EXPORT void* WKAccessibilityRootObject(WKBundleFrameRef frame);
+
 #ifdef __cplusplus
 }
 #endif
