Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h
@@ -85,7 +85,6 @@ WK_EXPORT bool WKBundlePageIsUsingDarkAppearance(WKBundlePageRef page);
 WK_EXPORT bool WKBundlePageCanShowMIMEType(WKBundlePageRef, WKStringRef mimeType);
 
 WK_EXPORT void WKAccessibilityEnable();
-WK_EXPORT void* WKAccessibilityRootObject(WKBundlePageRef);
 WK_EXPORT void* WKAccessibilityFocusedObject(WKBundlePageRef);
 WK_EXPORT void* WKAccessibilityFocusedUIElement();
 WK_EXPORT void WKAccessibilityAnnounce(WKBundlePageRef, WKStringRef);
